fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/HOL_Base__c.field-meta.xml
<CustomField>
    <fullName>HOL_Base__c</fullName>
    <inlineHelpText>Please enter your base number for the HOL product line.</inlineHelpText>
    <label>HOL Base</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>