fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Identified_key_decision_makers__c.field-meta.xml
<CustomField>
    <fullName>Identified_key_decision_makers__c</fullName>
    <inlineHelpText>Identified key decision-makers &amp; have developed an initial strategy to leverage advocates</inlineHelpText>
    <label>Identified key decision-makers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>