fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Identify_Current_Product_Used__c.field-meta.xml
<CustomField>
    <fullName>Identify_Current_Product_Used__c</fullName>
    <description>Observations</description>
    <label>Identify Current Product Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>