fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Impact_of_our_clinical_benefits__c.field-meta.xml
<CustomField>
    <fullName>Impact_of_our_clinical_benefits__c</fullName>
    <inlineHelpText>Key influencers have acknowledged &amp; quantified impact of our clinical benefits</inlineHelpText>
    <label>Impact of our clinical benefits</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>