fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Implementation_In_Service_Process__c.field-meta.xml
<CustomField>
    <fullName>Implementation_In_Service_Process__c</fullName>
    <description>Outline Implementation &amp; In-Service Process</description>
    <inlineHelpText>Outline Implementation &amp; In-Service Process</inlineHelpText>
    <label>Implementation &amp; In-Service Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>