fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Implemented_strategies__c.field-meta.xml
<CustomField>
    <fullName>Implemented_strategies__c</fullName>
    <inlineHelpText>Successfully implemented strategies to neutralize adversaries</inlineHelpText>
    <label>Implemented strategies</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>