fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Implemented_strategy__c.field-meta.xml
<CustomField>
    <fullName>Implemented_strategy__c</fullName>
    <inlineHelpText>Successfully implemented strategy to neutralize adversaries.</inlineHelpText>
    <label>Implemented strategy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>