fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Influencers_Acknowledged_Impacts__c.field-meta.xml
<CustomField>
    <fullName>Influencers_Acknowledged_Impacts__c</fullName>
    <inlineHelpText>Key influencers have acknowledged the quantifiable impact of our benefits</inlineHelpText>
    <label>Influencers Acknowledged Impacts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>