fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Intro_Effectiveness__c.field-meta.xml
<CustomField>
    <fullName>Intro_Effectiveness__c</fullName>
    <inlineHelpText>How effective was your “Customer-Focused Purpose” intro.?</inlineHelpText>
    <label>Intro Effectiveness</label>
    <type>TextArea</type>
</CustomField>