fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Introduce_clinical_support__c.field-meta.xml
<CustomField>
    <fullName>Introduce_clinical_support__c</fullName>
    <label>Introduce clinical support</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>