fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Issues_Resistance_Anticipated__c.field-meta.xml
<CustomField>
    <fullName>Issues_Resistance_Anticipated__c</fullName>
    <inlineHelpText>What issues/resistance do you anticipate and plan to overcome these?</inlineHelpText>
    <label>Issues/Resistance Anticipated?</label>
    <type>TextArea</type>
</CustomField>