fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Key_Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Key_Decision_Criteria__c</fullName>
    <inlineHelpText>Identified the decision criteria of top key influencers</inlineHelpText>
    <label>Key Decision Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>