fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Key_Influencers_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Key_Influencers_Presentation__c</fullName>
    <inlineHelpText>Summarized &amp; shared key feedback and success metrics to key influencers</inlineHelpText>
    <label>Key Influencers Presentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>