fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Key_Metrics_to_Improve__c.field-meta.xml
<CustomField>
    <fullName>Key_Metrics_to_Improve__c</fullName>
    <inlineHelpText>Identified the key metrics the customer needs to improve</inlineHelpText>
    <label>Key Metrics to Improve</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>