fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/KOL_1__c.field-meta.xml
<CustomField>
    <fullName>KOL_1__c</fullName>
    <defaultValue>&quot;KOL Name:&quot;&amp;BR()&amp;&quot;KOL Account:&quot;&amp;BR()&amp;&quot;KOL Type:&quot;&amp;BR()</defaultValue>
    <label>KOL #1</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>