fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Leveraged_relationships__c.field-meta.xml
<CustomField>
    <fullName>Leveraged_relationships__c</fullName>
    <label>Leveraged relationships</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>