fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Ligation_Service_TargetV2__c.field-meta.xml
<CustomField>
    <fullName>Ligation_Service_TargetV2__c</fullName>
    <defaultValue>&quot;Ligation Service (Target = minimum 2 accounts / month)&quot;&amp;BR()&amp;&quot;Accounts / Progress and/or Challenges:&quot;&amp;BR()&amp;&quot;1.&quot;&amp;BR()&amp;&quot;2.&quot;&amp;BR()&amp;&quot;3.&quot;&amp;BR()&amp;&quot;4.&quot;&amp;BR()&amp;&quot;5.&quot;&amp;BR()&amp;&quot;6.&quot;</defaultValue>
    <label>Ligation Return to Service</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>