fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/main_competitive_threats__c.field-meta.xml
<CustomField>
    <fullName>main_competitive_threats__c</fullName>
    <inlineHelpText>Identified main competitive threats &amp; their supporters in the account</inlineHelpText>
    <label>Main competitive threats</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>