fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Market_Development_Professional_Educat__c.field-meta.xml
<CustomField>
    <fullName>Market_Development_Professional_Educat__c</fullName>
    <label>Market Development/Wish List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>