fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/MDM_Collaboration_Opps_curr_or_planned__c.field-meta.xml
<CustomField>
    <fullName>MDM_Collaboration_Opps_curr_or_planned__c</fullName>
    <label>MDM Collaboration Opps (curr or planned)</label>
    <type>TextArea</type>
</CustomField>