fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/MDM_Collaboration_RSM_comments__c.field-meta.xml
<CustomField>
    <fullName>MDM_Collaboration_RSM_comments__c</fullName>
    <label>MDM Collaboration (RSM comments)</label>
    <type>TextArea</type>
</CustomField>