fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Meeting_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Minutes__c</fullName>
    <label>Meeting Minutes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>