fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Mgr_Competency3__c.field-meta.xml
<CustomField>
    <fullName>Mgr_Competency3__c</fullName>
    <label>Manager Observations</label>
    <type>TextArea</type>
</CustomField>