fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Milestones__c.field-meta.xml
<CustomField>
    <fullName>Milestones__c</fullName>
    <inlineHelpText>What information are you seeking and which specific milestones do you want to accomplish?</inlineHelpText>
    <label>Milestones</label>
    <type>TextArea</type>
</CustomField>