fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Milestones_Accomplished__c.field-meta.xml
<CustomField>
    <fullName>Milestones_Accomplished__c</fullName>
    <label>Milestones Accomplished</label>
    <length>255</length>
    <type>Text</type>
</CustomField>