fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/MiniLap_Growth_Retention2__c.field-meta.xml
<CustomField>
    <fullName>MiniLap_Growth_Retention2__c</fullName>
    <defaultValue>&quot;Trial, adoption, and retention targets = minimum 1 / mth&quot;&amp;BR()&amp;&quot;Accounts / Surgeon(s) / Status:&quot;&amp;BR()&amp;&quot;1.&quot;&amp;BR()&amp;&quot;2.&quot;&amp;BR()&amp;&quot;3.&quot;</defaultValue>
    <label>MiniLap Growth / Retention</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>