fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/My_Territory_Needs__c.field-meta.xml
<CustomField>
    <fullName>My_Territory_Needs__c</fullName>
    <defaultValue>&quot;In order for my territory to perform at or exceed expectations, my territory needs are:&quot;</defaultValue>
    <label>My Territory Needs</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>