fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Needs_Communicated__c.field-meta.xml
<CustomField>
    <fullName>Needs_Communicated__c</fullName>
    <inlineHelpText>Clearly articulated the clinical &amp; economic needs of the account to my Manager</inlineHelpText>
    <label>Needs Communicated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>