fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Next_Steps_2__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_2__c</fullName>
    <label>Next Steps, Discussion Points</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>