fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <defaultValue>&quot;I have verified validity and accuracy of the current SFDC pipeline and thoroughness and timeliness of Imperative Tracking activity.&quot;</defaultValue>
    <label>Note:</label>
    <type>TextArea</type>
</CustomField>