fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Objective_1_Post_Visit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Objective_1_Post_Visit_Notes__c</fullName>
    <label>Objective #1 Post Visit Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>