fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Objective_2_Account_s__c.field-meta.xml
<CustomField>
    <fullName>Objective_2_Account_s__c</fullName>
    <label>Objective #2 Account(s)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>