fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Objective_3_Vendor_Credentialing__c.field-meta.xml
<CustomField>
    <fullName>Objective_3_Vendor_Credentialing__c</fullName>
    <inlineHelpText>Please choose a Vendor Credentialing Service for this facility.</inlineHelpText>
    <label>Objective #3 Vendor Credentialing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vendor_Credentialing_Service</valueSetName>
    </valueSet>
</CustomField>