fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Objective_4_Vendor_Credentialing_Other__c.field-meta.xml
<CustomField>
    <fullName>Objective_4_Vendor_Credentialing_Other__c</fullName>
    <label>Objective #4 Vendor Credentialing Other</label>
    <length>15</length>
    <type>Text</type>
</CustomField>