fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Obtained_clinical_reasoning_for_therapy__c.field-meta.xml
<CustomField>
    <fullName>Obtained_clinical_reasoning_for_therapy__c</fullName>
    <label>Obtained clinical reasoning for therapy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>