fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Visit Summary</relationshipLabel>
    <relationshipName>Visit_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>