fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Opportunity_Comments_Direction_RSM__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Comments_Direction_RSM__c</fullName>
    <label>RSM Comments and Sales Direction</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>