fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Opportunity_Created__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Created__c</fullName>
    <inlineHelpText>Created opportunity in sales force and forecast</inlineHelpText>
    <label>Opportunity Created</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>