fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Ordered_equipment_for_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Ordered_equipment_for_Evaluation__c</fullName>
    <label>Ordered equipment for Evaluation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>