fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Organized_Communication__c.field-meta.xml
<CustomField>
    <fullName>Organized_Communication__c</fullName>
    <inlineHelpText>Organized communication among all players within account.</inlineHelpText>
    <label>Organized Communication?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>