fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Overcome_Issues_Resistances__c.field-meta.xml
<CustomField>
    <fullName>Overcome_Issues_Resistances__c</fullName>
    <inlineHelpText>Were you able to overcome issues/resistance? How?  Was this anticipated?  What’s the impact ?</inlineHelpText>
    <label>Overcome Issues/Resistances?</label>
    <type>TextArea</type>
</CustomField>