fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Percent_Objective_3__c.field-meta.xml
<CustomField>
    <fullName>Percent_Objective_3__c</fullName>
    <label>% Objective</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>