fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Percutaneous_Base__c.field-meta.xml
<CustomField>
    <fullName>Percutaneous_Base__c</fullName>
    <description>A field to enter your base number for Percutaneous product line</description>
    <inlineHelpText>Please enter your base number for the Percutaneous product line.</inlineHelpText>
    <label>Percutaneous Base</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>