fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Percutaneous_to_Quota__c.field-meta.xml
<CustomField>
    <fullName>Percutaneous_to_Quota__c</fullName>
    <formula>Percutaneous_YTD_Sales__c/Percutaneous_Quota__c</formula>
    <label>Percutaneous % to Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>