fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/PICC_VPS_CFY_Objective__c.field-meta.xml
<CustomField>
    <fullName>PICC_VPS_CFY_Objective__c</fullName>
    <label>PICC/VPS CFY Objective</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>