fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/PICC_VPS_YTD_Percent_Objective__c.field-meta.xml
<CustomField>
    <fullName>PICC_VPS_YTD_Percent_Objective__c</fullName>
    <formula>IF(PICC_VPS_YTD_Objective__c &lt;&gt; 0,PICC_VPS_YTD_Sales__c/PICC_VPS_YTD_Objective__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PICC/VPS YTD % Objective</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>