fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Planning__c.field-meta.xml
<CustomField>
    <fullName>Planning__c</fullName>
    <description>Planning  (clear set objectives for calls, planned Advances utilizing SMART Criteria, set questioning model to obtain)</description>
    <inlineHelpText>Planning  (clear set objectives for calls, planned Advances utilizing SMART Criteria, set questioning model to obtain)</inlineHelpText>
    <label>Planning</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exceeds</fullName>
            </value>
            <value>
                <fullName>Fully Meets</fullName>
            </value>
            <value>
                <fullName>Partially Meets</fullName>
            </value>
            <value>
                <fullName>Does Not Meet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>