fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Planning_CE__c.field-meta.xml
<CustomField>
    <fullName>Planning_CE__c</fullName>
    <description>Planning  (sets clear objectives for clinical calls, utilizes vetting and implementation checklists, provides agenda to manager )</description>
    <inlineHelpText>Planning  (sets clear objectives for clinical calls, utilizes vetting and implementation checklists, provides agenda to manager )</inlineHelpText>
    <label>Planning</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exceeds</fullName>
            </value>
            <value>
                <fullName>Fully Meets</fullName>
            </value>
            <value>
                <fullName>Partially Meets</fullName>
            </value>
            <value>
                <fullName>Does Not Meet</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
            <value>
                <fullName>Achieving</fullName>
            </value>
            <value>
                <fullName>Exceeding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>