fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Planning_Comments__c.field-meta.xml
<CustomField>
    <fullName>Planning_Comments__c</fullName>
    <label>Planning Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>