fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <label>Primary Contact</label>
    <length>64</length>
    <type>Text</type>
</CustomField>