fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Prior_6_Mos_Closed_Won_Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Prior_6_Mos_Closed_Won_Actual_Revenue__c</fullName>
    <label>Prior 6 Mos. Closed-Won Actual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>