fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Prior_6_Mos_Number_of_Closes__c.field-meta.xml
<CustomField>
    <fullName>Prior_6_Mos_Number_of_Closes__c</fullName>
    <label>Prior 6 Mos. Number of Closes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>