fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Priority_2__c.field-meta.xml
<CustomField>
    <fullName>Priority_2__c</fullName>
    <defaultValue>&quot;Account:&quot;&amp;BR()&amp;&quot;Products:&quot;&amp;BR()&amp;&quot;SSO:&quot;&amp;BR()&amp;&quot; Financial Decision Maker:&quot;&amp;BR()&amp;&quot;Champion:&quot;</defaultValue>
    <label>Priority #2</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>