fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Product_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Product_Knowledge__c</fullName>
    <description>Product Knowledge (clinical application, trouble-shooting skills, communicate clinical message, knowledge of competition)</description>
    <inlineHelpText>Product Knowledge (clinical application, trouble-shooting skills, communicate clinical message, knowledge of competition)</inlineHelpText>
    <label>Product Knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exceeds</fullName>
            </value>
            <value>
                <fullName>Fully Meets</fullName>
            </value>
            <value>
                <fullName>Partially Meets</fullName>
            </value>
            <value>
                <fullName>Does Not Meet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>