fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Product_Knowledge_CE__c.field-meta.xml
<CustomField>
    <fullName>Product_Knowledge_CE__c</fullName>
    <description>Product Knowledge (understands and presents clinical application, demonstrates appropriate trouble-shooting skills, communicates clinical message, has knowledge of competition, does not speak to off-label use)</description>
    <inlineHelpText>Product Knowledge (understands and presents clinical application, demonstrates appropriate trouble-shooting skills, communicates clinical message, has knowledge of competition, does not speak to off-label use)</inlineHelpText>
    <label>Product Knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exceeds</fullName>
            </value>
            <value>
                <fullName>Fully Meets</fullName>
            </value>
            <value>
                <fullName>Partially Meets</fullName>
            </value>
            <value>
                <fullName>Does Not Meet</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
            <value>
                <fullName>Achieving</fullName>
            </value>
            <value>
                <fullName>Exceeding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>