fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Product_Knowledge_Comments__c.field-meta.xml
<CustomField>
    <fullName>Product_Knowledge_Comments__c</fullName>
    <label>Product Knowledge Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>