fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/ProfileEmail__c.field-meta.xml
<CustomField>
    <fullName>ProfileEmail__c</fullName>
    <inlineHelpText>Field is used to notify the CSS when Visit Summary is completed.</inlineHelpText>
    <label>Profile Email</label>
    <type>Email</type>
</CustomField>